[tool.poetry]
name = "diff-poetry-lock"
version = "0.1.0"
description = "A GitHub Action that posts a summary of all changes within the poetry.lock file to a pull request"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.0"
requests = "^2.28.0"
poetry-core = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
